--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -15,7 +15,7 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 1
 
     steps:
       - name: generate pacman-contribution-graph.svg
@@ -31,3 +31,4 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          runs-on: self-hosted
